--- a/kadai_022/kadai_022.html
+++ b/kadai_022/kadai_022.html
@@ -5,7 +5,7 @@
     <meta name="description" content="このページは22章の課題です。">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!__以下の1行で外部のcssファイルを読み込みます__>
+    <!--以下の1行で外部のcssファイルを読み込みます-->
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -16,30 +16,24 @@
     <main>
       <div id="parent">
         <div class="contents">
-          <div id="contents-child01">
            <h2>東京の天気</h2>
            <p>今日の天気は雨です。</p>
            <p>傘を持って行ってください。</p>
            <img src="images/rainy.png">
-          </div>
        </div>
 
         <div class="contents">
-         <div id="contents-child02">
           <h2>北海道の天気</h2>
           <p>今日の天気は曇りです。</p>
           <p>傘は念のため持って行きましょう。</p>
           <img src="images/cloudy.png">
-         </div>
        </div>
 
        <div class="contents">
-         <div id="contents-child03">
           <h2>沖縄の天気</h2>
           <p>今日の天気は晴れです。</p>
           <p>傘は必要ないでしょう。</p>
           <img src="images/sunny.png">
-         </div>
        </div>
 
       </div>
